Page MenuHome GnuPG

Kleopatra: Recipient input briefly shows error until lookup is completed
Closed, ResolvedPublic

Description

How to reproduce:

  1. Start with an empty key ring, create an OpenPGP key pair.
  2. Open Notepad and check Encrypt for others.
  3. Enter werner.koch@gnupg.com and press the Return key.

Observation: Briefly, "Error: No matching certificates or groups found" is displayed. Then the error disappears and the icon changes from a red one to a blue one.

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Apr 26 2022, 11:18 AM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: Restricted Project.
ikloecker added a subscriber: werner.

Fixed. Until the lookup is completed, a question mark icon should be shown and no error should be displayed.

werner removed a project: Restricted Project.Sep 22 2022, 11:03 AM
ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.