Show question icon instead of error icon while user enters recipient

Instead of showing the question icon for ambiguous entries and the
error icon for entries not matching anything, we show the question icon
as long as the user enters a recipient and we show the error icon (and
the error message) once the users commit their entry (with Return or Tab).

GnuPG-bug-id: 5945